@@ -1,5 +1,12 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int C] Move #include <pwd.h> to .c files.
+
+	* base.h: Don't #include <pwd.h>.
+	* rcsutil.c [HAVE_PWD_H]: #include <pwd.h>.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int C] Move #include <fcntl.h> to .c files.
 
 	* base.h: Don't #include <fcntl.h>.
